--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -10,59 +10,194 @@
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:elevation="8dp">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="28dp"
+                android:text="Atasiwirapp"
+                android:textColor="#0F88C5"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/logout_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="28dp"
+                android:layout_marginEnd="28dp"
+                android:background="@android:drawable/screen_background_light_transparent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_logout_svgrepo_com" />
+
+            <ImageView
+                android:id="@+id/profile_pic"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="44dp"
+                android:background="@drawable/profile_picture"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+            <TextView
+                android:id="@+id/profile_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="44dp"
+                android:text="Zhong Xina"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@+id/profile_pic"
+                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+            <TextView
+                android:id="@+id/profile_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="zhongxina@gmail.com"
+                android:textSize="10sp"
+                app:layout_constraintStart_toEndOf="@+id/profile_pic"
+                app:layout_constraintTop_toBottomOf="@+id/profile_name" />
+
+            <TextView
+                android:id="@+id/profile_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="Sunting Profil"
+                android:textColor="#0F88C5"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@+id/profile_pic"
+                app:layout_constraintTop_toBottomOf="@+id/profile_email" />
 
             <TextView
                 android:id="@+id/menu_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="40dp"
                 android:text="Menu"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                tools:layout_editor_absoluteX="32dp"
-                tools:layout_editor_absoluteY="212dp" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/profile_pic" />
+
+            <TextView
+                android:id="@+id/wisata_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="48dp"
+                android:layout_marginTop="8dp"
+                android:text="Wisata"
+                android:textAlignment="center"
+                android:textSize="10sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnWisata" />
+
+            <ImageButton
+                android:id="@+id/btnWisata"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/wisata_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/menu_text" />
+
+            <ImageButton
+                android:id="@+id/btnHotel"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="36dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/hotel_icon"
+                app:layout_constraintStart_toEndOf="@+id/btnWisata"
+                app:layout_constraintTop_toBottomOf="@+id/menu_text" />
+
+            <ImageButton
+                android:id="@+id/btnKuliner"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/kuliner_icon"
+                app:layout_constraintEnd_toStartOf="@+id/btnSuvenir"
+                app:layout_constraintStart_toEndOf="@+id/btnHotel"
+                app:layout_constraintTop_toBottomOf="@+id/menu_text" />
+
+            <ImageButton
+                android:id="@+id/btnSuvenir"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="32dp"
+                android:background="@drawable/suvenir_icon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/menu_text" />
+
+            <TextView
+                android:id="@+id/hotel_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="4dp"
+                android:text="Hotel"
+                android:textAlignment="center"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toStartOf="@+id/kuliner_text"
+                app:layout_constraintStart_toEndOf="@+id/wisata_text"
+                app:layout_constraintTop_toBottomOf="@+id/btnHotel" />
+
+            <TextView
+                android:id="@+id/kuliner_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="64dp"
+                android:text="Kuliner"
+                android:textAlignment="center"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toStartOf="@+id/suvenir_text"
+                app:layout_constraintTop_toBottomOf="@+id/btnKuliner" />
 
             <TextView
                 android:id="@+id/suvenir_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="44dp"
                 android:text="Suvenir"
                 android:textAlignment="center"
                 android:textSize="10sp"
-                tools:layout_editor_absoluteX="331dp"
-                tools:layout_editor_absoluteY="318dp" />
-
-            <ImageView
-                android:id="@+id/wisata_icon"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:background="@drawable/wisata"
-                tools:layout_editor_absoluteX="32dp"
-                tools:layout_editor_absoluteY="246dp" />
-
-            <ImageView
-                android:id="@+id/suvenir_icon"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:background="@drawable/wisata"
-                tools:layout_editor_absoluteX="315dp"
-                tools:layout_editor_absoluteY="246dp" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnSuvenir" />
 
             <LinearLayout
                 android:id="@+id/wisata_populer_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
+                android:layout_marginTop="32dp"
                 android:orientation="vertical"
-                tools:layout_editor_absoluteY="344dp">
+                app:layout_constraintTop_toBottomOf="@+id/hotel_text">
 
                 <TextView
                     android:id="@+id/wisata_populer_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
-                    android:layout_marginTop="32dp"
                     android:text="Wisata Populer"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -76,139 +211,44 @@
                     android:layout_marginTop="12dp"
                     android:orientation="horizontal"
                     android:scrollbars="horizontal" />
+
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/kuliner_icon"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:background="@drawable/wisata"
-                tools:layout_editor_absoluteX="221dp"
-                tools:layout_editor_absoluteY="246dp" />
-
-            <TextView
-                android:id="@+id/wisata_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Wisata"
-                android:textAlignment="center"
-                android:textSize="10sp"
-                tools:layout_editor_absoluteX="49dp"
-                tools:layout_editor_absoluteY="318dp" />
-
-            <TextView
-                android:id="@+id/info_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Informasi"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                tools:layout_editor_absoluteX="32dp"
-                tools:layout_editor_absoluteY="636dp" />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraintLayout"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="188dp"
-                android:elevation="8dp">
+                android:layout_height="match_parent"
+                android:layout_marginTop="32dp"
+                app:layout_constraintTop_toBottomOf="@+id/wisata_populer_layout">
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/info_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
-                    android:layout_marginTop="28dp"
-                    android:text="Atasiwirapp"
-                    android:textColor="#0F88C5"
-                    android:textSize="20sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageButton
-                    android:id="@+id/logout_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="28dp"
-                    android:layout_marginEnd="28dp"
-                    android:background="@android:drawable/screen_background_light_transparent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_logout_svgrepo_com" />
-
-                <ImageView
-                    android:id="@+id/profile_pic"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="44dp"
-                    android:background="@drawable/profile_picture"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                    android:text="Informasi"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/profile_name"
+                    android:id="@+id/lihatSemuaInfo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="44dp"
-                    android:text="Zhong Xina"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@+id/profile_pic"
-                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="32dp"
+                    android:text="Lihat Semua"
+                    android:textColor="#46B3E6"
+                    android:textSize="14sp" />
 
-                <TextView
-                    android:id="@+id/profile_email"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:text="zhongxina@gmail.com"
-                    android:textSize="10sp"
-                    app:layout_constraintStart_toEndOf="@+id/profile_pic"
-                    app:layout_constraintTop_toBottomOf="@+id/profile_name" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/info_text"
+                    android:layout_marginTop="12dp"
+                    app:layout_constraintTop_toBottomOf="@+id/info_text"/>
+            </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/profile_edit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:text="Sunting Profil"
-                    android:textColor="#0F88C5"
-                    android:textSize="10sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@+id/profile_pic"
-                    app:layout_constraintTop_toBottomOf="@+id/profile_email" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <ImageView
-                android:id="@+id/hotel_icon"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:background="@drawable/wisata"
-                tools:layout_editor_absoluteX="127dp"
-                tools:layout_editor_absoluteY="246dp" />
-
-            <TextView
-                android:id="@+id/hotel_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Hotel"
-                android:textAlignment="center"
-                android:textSize="10sp"
-                tools:layout_editor_absoluteX="147dp"
-                tools:layout_editor_absoluteY="318dp" />
-
-            <TextView
-                android:id="@+id/kuliner_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Kuliner"
-                android:textAlignment="center"
-                android:textSize="10sp"
-                tools:layout_editor_absoluteX="238dp"
-                tools:layout_editor_absoluteY="318dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
