--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".HomePage">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,8 +20,9 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="28dp"
+                android:fontFamily="@font/poppins_semibold"
                 android:text="Atasiwirapp"
                 android:textColor="#0F88C5"
                 android:textSize="20sp"
@@ -42,7 +44,7 @@
                 android:id="@+id/profile_pic"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="44dp"
                 android:background="@drawable/profile_picture"
                 app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="44dp"
+                android:fontFamily="@font/poppins_semibold"
                 android:text="Zhong Xina"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -65,6 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:fontFamily="@font/poppins"
                 android:text="zhongxina@gmail.com"
                 android:textSize="10sp"
                 app:layout_constraintStart_toEndOf="@+id/profile_pic"
@@ -76,6 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/poppins_semibold"
                 android:text="Sunting Profil"
                 android:textColor="#0F88C5"
                 android:textSize="10sp"
@@ -87,8 +92,9 @@
                 android:id="@+id/menu_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="40dp"
+                android:fontFamily="@font/poppins_semibold"
                 android:text="Menu"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -99,8 +105,9 @@
                 android:id="@+id/wisata_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="48dp"
+                android:layout_marginStart="46dp"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/poppins"
                 android:text="Wisata"
                 android:textAlignment="center"
                 android:textSize="10sp"
@@ -111,9 +118,10 @@
                 android:id="@+id/btnWisata"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/wisata_icon"
+                android:elevation="3dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/menu_text" />
 
@@ -124,6 +132,7 @@
                 android:layout_marginStart="36dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/hotel_icon"
+                android:elevation="3dp"
                 app:layout_constraintStart_toEndOf="@+id/btnWisata"
                 app:layout_constraintTop_toBottomOf="@+id/menu_text" />
 
@@ -133,6 +142,7 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/kuliner_icon"
+                android:elevation="3dp"
                 app:layout_constraintEnd_toStartOf="@+id/btnSuvenir"
                 app:layout_constraintStart_toEndOf="@+id/btnHotel"
                 app:layout_constraintTop_toBottomOf="@+id/menu_text" />
@@ -144,6 +154,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/suvenir_icon"
+                android:elevation="3dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/menu_text" />
 
@@ -153,6 +164,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="4dp"
+                android:fontFamily="@font/poppins"
                 android:text="Hotel"
                 android:textAlignment="center"
                 android:textSize="10sp"
@@ -166,6 +178,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="64dp"
+                android:fontFamily="@font/poppins"
                 android:text="Kuliner"
                 android:textAlignment="center"
                 android:textSize="10sp"
@@ -178,6 +191,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="44dp"
+                android:fontFamily="@font/poppins"
                 android:text="Suvenir"
                 android:textAlignment="center"
                 android:textSize="10sp"
@@ -197,7 +211,8 @@
                     android:id="@+id/wisata_populer_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
+                    android:layout_marginStart="30dp"
+                    android:fontFamily="@font/poppins_semibold"
                     android:text="Wisata Populer"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -208,6 +223,7 @@
                     android:id="@+id/rvWp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
                     android:layout_marginTop="12dp"
                     android:orientation="horizontal"
                     android:scrollbars="horizontal" />
@@ -224,7 +240,8 @@
                     android:id="@+id/info_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
+                    android:layout_marginStart="30dp"
+                    android:fontFamily="@font/poppins_semibold"
                     android:text="Informasi"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -235,6 +252,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="32dp"
+                    android:fontFamily="@font/poppins_semibold"
                     android:text="Lihat Semua"
                     android:textColor="#46B3E6"
                     android:textSize="14sp" />
@@ -244,8 +262,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/info_text"
+                    android:layout_marginStart="30dp"
                     android:layout_marginTop="12dp"
-                    app:layout_constraintTop_toBottomOf="@+id/info_text"/>
+                    app:layout_constraintTop_toBottomOf="@+id/info_text" />
             </RelativeLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
