--- a/app/src/main/res/layout/layout_informasi.xml
+++ b/app/src/main/res/layout/layout_informasi.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="200dp"
+    android:layout_width="160dp"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="8dp">
+    android:orientation="horizontal"
+    android:scrollbars="horizontal"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="3dp"
+    app:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -12,15 +16,15 @@
 
         <ImageView
             android:id="@+id/imgInfo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="160dp"
+            android:layout_height="120dp"
             android:layout_alignParentTop="true"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_launcher_background" />
 
         <TextView
             android:id="@+id/descInfo"
-            android:layout_width="wrap_content"
+            android:layout_width="152dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imgInfo"
             android:layout_alignParentStart="false"
