--- a/app/src/main/res/layout/layout_wisata_populer.xml
+++ b/app/src/main/res/layout/layout_wisata_populer.xml
@@ -2,9 +2,12 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="200dp"
+    android:layout_width="160dp"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="8dp">
+    android:orientation="horizontal"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="3dp"
+    app:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -12,8 +15,8 @@
 
         <ImageView
             android:id="@+id/imgWp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="160dp"
+            android:layout_height="120dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_launcher_background" />
 
@@ -25,6 +28,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
+            android:fontFamily="@font/poppins"
             android:text="Nama Wisata"
             android:textSize="12sp" />
 
@@ -50,9 +54,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_toEndOf="@id/imgMenuStar"
+                android:fontFamily="@font/poppins_semibold"
                 android:text="5.0"
                 android:textColor="#EFBE05"
                 android:textSize="10sp" />
+
+            <TextView
+                android:id="@+id/descWp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:visibility="gone" />
 
         </RelativeLayout>
 
